--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+	background: #000 url('img/marvel-background.png');
+	background-size: cover;
+	height: 100vh;
+	color: #fff;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+	text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+	max-width: 1100px;
+	margin: auto;
+	padding: 0 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+	display: inline-block;
+	color: #fff;
+	background-color: #3fb573;
+	font-size: 1em;
+	text-align: center;
+	padding: 10px 15px;
+	border: 0;
+	margin: 10px 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+	height: 200px;
+}
+
+header img {
+	width: 200px;
+}
+
+.center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.contents {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.card {
+	margin: 5px;
+}
+.card-img {
+	width: 500px;
+	height: 300px;
+	object-fit: cover;
+}
+
+.card-text {
+	text-align: center;
+}
+.containerInput {
+	text-align: center;
+}
+
+@media (max-width: 800px) {
+	.contents {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (max-width: 500px) {
+	.contents {
+		grid-template-columns: 1fr;
+	}
 }
