--- a/src/App.css
+++ b/src/App.css
@@ -49,16 +49,20 @@ header img {
 }
 
 .contents {
+	margin: auto;
+	width: 80%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	flex-wrap: wrap;
 }
 
 .card {
 	margin: 5px;
+	width: 250px;
+	height: 300px;
 }
 .card-img {
-	width: 250px;
+	width: 200px;
 	height: 250px;
 }
 
