--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,38 @@ header img {
 	background-color: #fff;
 }
 
+.pages {
+	position: fixed;
+	bottom: 0;
+	background: #100a1f;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+	padding: 10px;
+}
+
+.pages button {
+	cursor: pointer;
+	border: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 50px;
+	width: 200px;
+	background: #241744;
+	color: #fff;
+	border-radius: 100px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	transition: 0.3s ease all;
+}
+
+.pages button:hover {
+	background: #137c32;
+}
+
 input {
 	width: 40%;
 }
